<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description"
        android:src="@color/brightPink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_greeting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/textView_greeting"
        android:textColor="@color/darkPink"
        android:textSize="18pt"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_horizontalCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:srcCompat="@drawable/design_picture"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:background="@drawable/semicircle"
        android:gravity="center"
        android:text="@string/button_Enter_text"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_secondButtonOfMenu"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_firstButtonOfMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/firstButtonOfMenu"
        app:layout_constraintBottom_toTopOf="@+id/button_secondButtonOfMenu"
        app:layout_constraintEnd_toStartOf="@+id/guideline_horizontalCenter"
        app:layout_constraintStart_toStartOf="@+id/guideline_horizontalCenter"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button_secondButtonOfMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondButtonOfMenu"
        app:layout_constraintBottom_toTopOf="@+id/button_thirdButtonOfMenu"
        app:layout_constraintEnd_toEndOf="@+id/button_firstButtonOfMenu"
        app:layout_constraintStart_toStartOf="@+id/button_firstButtonOfMenu"
        app:layout_constraintTop_toBottomOf="@+id/button_firstButtonOfMenu"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_thirdButtonOfMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/thirdButtonOfMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_secondButtonOfMenu"
        app:layout_constraintStart_toStartOf="@+id/button_secondButtonOfMenu"
        app:layout_constraintTop_toBottomOf="@+id/button_secondButtonOfMenu"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>